; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_asfdec_f.c_get_id3_tag.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_asfdec_f.c_get_id3_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ID3v2_DEFAULT_MAGIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @get_id3_tag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_id3_tag(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32* null, i32** %5, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* @ID3v2_DEFAULT_MAGIC, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @ff_id3v2_read(i32* %6, i32 %7, i32** %5, i32 %8)
  %10 = load i32*, i32** %5, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %2
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @ff_id3v2_parse_apic(i32* %13, i32** %5)
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @ff_id3v2_parse_chapters(i32* %15, i32** %5)
  br label %17

17:                                               ; preds = %12, %2
  %18 = call i32 @ff_id3v2_free_extra_meta(i32** %5)
  ret void
}

declare dso_local i32 @ff_id3v2_read(i32*, i32, i32**, i32) #1

declare dso_local i32 @ff_id3v2_parse_apic(i32*, i32**) #1

declare dso_local i32 @ff_id3v2_parse_chapters(i32*, i32**) #1

declare dso_local i32 @ff_id3v2_free_extra_meta(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
